@@ -5,6 +5,12 @@ then
   HOST=i386-mingw32-4.3.0
 fi
 
+if [ -d /usr/i586-mingw32msvc ] ; 
+then
+  export PATH=/usr/i586-mingw32msvc/bin:$PATH
+  HOST=i586-mingw32msvc
+fi
+
 if [ -d /usr/i686-w64-mingw32 ] ;
 then 
   export PATH=/usr/local/i686-w64-mingw32:$PATH
